force-app/main/default/objects/Company_details__mdt/Company_details__mdt.object-meta.xml
<CustomObject>
    <label>Company Details</label>
    <pluralLabel>Company Details</pluralLabel>
</CustomObject>