force-app/main/default/objects/Company_details__mdt/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>