force-app/main/default/objects/Company_details__mdt/fields/Customer_Care_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Email__c</fullName>
    <label>Customer Care Email</label>
    <type>Email</type>
</CustomField>