force-app/main/default/objects/Company_details__mdt/fields/Customer_HelpLine_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_HelpLine_Number__c</fullName>
    <label>Customer HelpLine Number</label>
    <type>Phone</type>
</CustomField>