force-app/main/default/objects/Company_details__mdt/fields/IFSC__c.field-meta.xml
<CustomField>
    <fullName>IFSC__c</fullName>
    <label>IFSC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>