force-app/main/default/objects/Company_details__mdt/fields/Timings__c.field-meta.xml
<CustomField>
    <fullName>Timings__c</fullName>
    <label>Timings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>